# sane-wrapper

./: .gitignore  CMakeLists.txt  main.cpp  problems.txt  readme.md  sane_wrap.cpp  sane_wrap.h
cli-test/: CMakeLists.txt  main.cpp
docs/: Doxyfile
gui/: CMakeLists.txt  capturer.cpp  capturer.h  drawingsurface.cpp  drawingsurface.h  drawingwidget.cpp  drawingwidget.h  gui_ru.ts  gui_ru_RU.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ruller.cpp  ruller.h  scanworker.cpp  scanworker.h  surface_widgets.cpp  surface_widgets.h  worker.cpp  worker.h
gui/rc/: app.qrc
sane-pp/: CMakeLists.txt  problems.txt  sane-pp.h  sane_wrapper.h  sane_wrapper_stub.h
sane-pp/v1/: sane_wrapper.cpp  sane_wrapper.h  sane_wrapper_stub.h  sane_wrapper_utils.h
sane-pp/v2/: internal_messages.h  sane_wrap2.cpp  sane_wrapper.cpp  sane_wrapper.h
sane-pp/v3/: sane_wrapper.h  sane_wrapper_stub.h  sane_wrapper_utils.h
src/: main.cpp  sane_wrap.cpp  sane_wrap.h  sane_wrap2.cpp  sane_wrap2.h  sane_wrap2_device_descr.cpp  sane_wrap2_device_descr.h
src/v3/: sane_wrapper.h
